frontend/src/stylesheets/modal.css
#overlay {
    position: absolute;
    left: 0;
    top: -142px;
    width: 105vw;
    height: 1250px;
    background-color: rgba(0, 0, 0, 0.7);
    display: flex;
    justify-content: center;
    align-items: center;
}

#modal {
    display: flex;
    justify-content: center;
    width: 100vw;
    margin-top: -675px;
    transform: translate(-30px, 20px);
    position: fixed;
}


.modal {
    background-color: white;
    padding: 20px;
    border-radius: 10px;
    width: 400px;
    height: 500px;
    z-index: 10;
    
}

.modal-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.modal-header-info {
    font-size: 24px;
}

.modal-close {
    font-size: 20px;
    border-radius: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 12px;
    height: 15px;
    width: 15px;
}

.modal-close:hover {
    background-color: rgba(0, 0, 0, 0.05);
    cursor: pointer;
}

.modal-form-separator {
    border-bottom: 1px solid lightgray;
    margin-top: 10px;
    margin-bottom: 10px;
}

.modal-input {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    width: 400px;
    padding: 10px;
}

.modal-input > label {
    font-size: 20px;
    margin-right: 20px;
}

.modal-input > input {
    height: 30px;
    width: 270px;
    border: 1px solid black;
    border-radius: 10px;
}

.modal-text {
    width: 100%;
    height: 200px;
}

#modal-text-input {
    display: flex;
    flex-direction: column;
}

#modal-text-input > label {
    width: 100%;
    display: flex;
    padding-left: 15px;
    padding-bottom: 10px;
    justify-content: flex-start;
}

